@@ -1,3 +1,7 @@
+2012-06-29  Simson Garfinkel  <simsong@imac3.local>
+
+	* src/md5.c (MD5Final): updated md5.c code to remove compiler warning dereferencing type-punned pointer will break strict-aliasing rules [-Wstrict-aliasing]"
+
 2012-06-09  Jesse Kornblum  <research@jessekornblum.com>:
 
 	* src/tiger.h tiger.c: Replaced with newer code from libgcrypt.
